Fix tooltip z-index

--- a/src/shared/components/ui/Tooltip/Tooltip.module.scss
+++ b/src/shared/components/ui/Tooltip/Tooltip.module.scss
@@ -5,11 +5,10 @@
 	flex-direction: column;
 
 	.tooltip {
-		min-width: fit-content;
-		height: 40px;
+		width: max-content;
+		min-height: 40px;
 		max-width: 300px;
 		text-wrap-mode: nowrap;
-		word-wrap: normal;
 		position: absolute;
 
 		// TODO opacity
@@ -17,7 +16,7 @@
 		backdrop-filter: blur(5px);
 		border-radius: var(--radius);
 		padding: var(--padding);
-		z-index: 3;
+		z-index: 100000;
 	}
 
 	.tooltip[data-position="top"] {
